generator client {
    provider = "prisma-client-js"
}

generator dbml {
    provider = "prisma-dbml-generator"
}

datasource db {
    provider = "sqlite"
    url      = "file:./dev.db"
}

model User {
    id        Int        @id @default(autoincrement())
    email     String     @unique
    name      String?
    password  String
    // role       UserRole @relation(fields: [userRoleId], references: [id])
    // userRoleId Int
    
    // exam     Exam[]
    tests     Test[]
    questions Question[]
    Exam      Exam[]
}


model Question {
    id       Int      @id @default(autoincrement())
    body     String
    cource   Cource   @relation(fields: [courceid], references: [id])
    courceid Int
    // exam     Exam[]
    user     User     @relation(fields: [userId], references: [id])
    answers  Answer[]

    userId Int
    Test   Test? @relation(fields: [testId], references: [id])
    testId Int?
}

model Answer {
    id         Int       @id @default(autoincrement())
    body       String
    isCorrect  Boolean
    Question   Question? @relation(fields: [questionId], references: [id])
    questionId Int?
}

model Cource {
    id        Int        @id @default(autoincrement())
    name      String
    questions Question[]
    // exam      Exam[]
    // Test      Test[]
    Test      Test[]
}


model Exam {
    id     Int    @id @default(autoincrement())
    test   Test   @relation(fields: [testId], references: [id])
    user   User   @relation(fields: [userid], references: [id])
    userid Int
    testId Int
    score  Int
    status String
}

model Test {
    id        Int        @id @default(autoincrement())
    title     String
    user      User       @relation(fields: [userId], references: [id])
    userId    Int
    questions Question[]
    course    Cource     @relation(fields: [courceId], references: [id])
    courceId  Int
    Exam      Exam[]
}
